--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Eddie's Site
 email: edward.orlov.341@my.csun.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  This is an awesome description
+  This is an awesome descriptionv2
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: EddieisCool
